--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 		<mybatis_spring.version>1.3.1</mybatis_spring.version>
 		<mybatis.version>3.4.2</mybatis.version>
 		<jackson.version>2.5.0</jackson.version>
+		<activiti.version>5.22.0</activiti.version>
 	</properties>
 
 	<dependencies>
@@ -163,6 +164,13 @@
 			<groupId>commons-fileupload</groupId>
 			<artifactId>commons-fileupload</artifactId>
 			<version>1.3.1</version>
+		</dependency>
+
+		<!-- Activiti相关包 -->
+		<dependency>
+			<groupId>org.activiti</groupId>
+			<artifactId>activiti-engine</artifactId>
+			<version>${activiti.version}</version>
 		</dependency>
 	</dependencies>
 
