--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,5 +1,5 @@
-jdbc.driverClass=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://127.0.0.1:3306/db_user_test?useUnicode=true&characterEncoding=utf8
-jdbc.user=root
+jdbc.driver=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://127.0.0.1:3306/db_activiti?useUnicode=true&characterEncoding=utf8
+jdbc.username=root
 jdbc.password=mysql
 
